fix: Js now only targets product-details url, accordion moved on small screens

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -39,8 +39,9 @@
                     <h2>Description</h2>
                     <p class="mt-3">{{ product.description }}</p>
                 </div>
+                <!--Accordion for shipping and extra details-->
                 <div class="bottom-container">
-                    <div class="accordion" id="accordionExample">
+                    <div class="accordion accordion-desktop" id="accordionExample">
                         <div class="accordion-item">
                         <p class="accordion-header">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -75,7 +76,7 @@
                         </p>
                         <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                            <p>If you experience any technical issues with your purchase, our support team is here to help. You can contact us via email or live chat, and we’ll do our best to resolve any problems as quickly as possible. For more complex issues, we also offer step-by-step guidance to ensure you get the most out of your product.</p>
+                            <p>If you experience any technical issues with your purchase, our support team is here to help. You can contact us via email or live chat, and we’ll do our best to resolve any problems as quickly as possible.</p>
                             </div>
                         </div>
                         </div>
@@ -124,6 +125,46 @@
                 <p>{{ product.neck_shape }}</p>
             </div>
             {% endif %}
+            <div class="accordion accordion-mobile" id="accordionExample">
+                <div class="accordion-item">
+                <p class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <i class="fas fa-truck me-3"></i>Shipping
+                    </button>
+                </p>
+                <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>Free shipping on orders over £50</strong>
+                        <p>Order today? Estimated shipping date: {{ estimated_shipping_date }} </p>
+                        <strong>Standard Delivery Cost: £4.99</strong> 
+                    </div>
+                </div>
+                </div>
+                <div class="accordion-item">
+                <p class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <i class="fas fa-rotate-left me-3"></i>Return Policy
+                    </button>
+                </p>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                    <p>You can return any unused item within 30 days of purchase for a full refund or exchange, provided it is in its original packaging and condition. Custom or personalised items are non-returnable unless faulty.</p>
+                    </div>
+                </div>
+                </div>
+                <div class="accordion-item">
+                <p class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <i class="fas fa-headset me-3"></i>Support
+                    </button>
+                </p>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                    <p>If you experience any technical issues with your purchase, our support team is here to help. You can contact us via email or live chat, and we’ll do our best to resolve any problems as quickly as possible.</p>
+                    </div>
+                </div>
+                </div>
+            </div>
             <!--You may also like-->
         <div class="row">
             <div class="col">
