--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,9 +8,9 @@
             </a>
         
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">By Price</a></li>
-            <li><a class="dropdown-item" href="#">By Rating</a></li>
-            <li><a class="dropdown-item" href="#">By Category</a></li>
+            <li><a class="dropdown-item" href="{% url 'products' %}?sort=price&direction=asc">By Price</a></li>
+            <li><a class="dropdown-item" href="{% url 'products' %}?sort=rating&direction=desc">By Rating</a></li>
+            <li><a class="dropdown-item" href="{% url 'products' %}?sort=category&direction=asc">By Category</a></li>
             <li><a class="dropdown-item" href="{% url 'products' %}">All Products</a></li>
             </ul>
         </div>
