--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -31,6 +31,13 @@
                 <div class="product-details-container mb-2 mt-md-2">
                     <h1 class="mb-0 mb-md-2">{{ product.name }}</h1>
                     <p class="lead mb-0 text-left font-weight-bold gold-font mb-md-2">£{{ product.price }}</p>
+                    {% if product.category %}
+                        <p class="small mt-1 mb-0">
+                            <a class="text-muted mb-md-2" href="{% url 'products' %}?category={{ product.category.name }}">
+                                <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                            </a>
+                        </p>
+                    {% endif %}
                     {% if product.rating %}
                         <small class="text-muted mb-md-2"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                     {% else %}
