--- a/static/css/base.css
+++ b/static/css/base.css
@@ -50,7 +50,7 @@ body {
 }
 
 .border-black {
-  border: 1px solid black !important;
+  border: 1px solid #1f1f1f;
 }
 
 .desktop-header .row {
@@ -132,6 +132,19 @@ body {
 
 a:-webkit-any-link {
   text-decoration: none !important;
+}
+
+.btt-button {
+  height: 42px;
+  width: 42px;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+}
+
+.btt-link {
+  cursor: pointer;
+  color: #1f1f1f;
 }
 /* -------------------------------- Media Queries */
 
@@ -231,7 +244,7 @@ a:-webkit-any-link {
 
 .button:hover,
 .gold:hover {
-  transition-duration: 0.4s;
+  transition-duration: 0.4s !;
   -moz-transition-duration: 0.4s;
   -webkit-transition-duration: 0.4s;
   -o-transition-duration: 0.4s;
