feat: added shopping bag app, urls and template

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -15,7 +15,7 @@
                             </form>
                         </li>
                         <li class="list-inline-item icon">
-                            <a href="/cart" class="text-black">
+                            <a href="{% url 'view_bag' %}" class="text-black">
                                 <i class="fas fa-shopping-bag fa-lg"></i>
                             </a>
                         </li>
