--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %} 
 {% load static %} 
 
@@ -11,28 +10,30 @@
 {% endblock %} 
 
 {% block content %}
-  <div class="container mb-2">
-    <div class="row">
-        <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4">Shopping Bag</h2>
-            <hr>
+    <div class="container mb-2">
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4">Shopping Bag</h2>
+                <hr>
+            </div>
         </div>
-
-    </div>
-    <div class="row">
-        <div class="col">
-            {% if bag_items %}
-                <div class="table-responsive rounded"></div>
-            {% else %}
-                <p class="lead mb-5">Your bag is empty</p>
-                <a href="{% url 'products' %}" class="btn"></a>btn-outline-black.round-0.btn-lg
-                    <span class="icon">
-                        <i class="fas fa-chevron-left"></i>
-                    </span>
-                    <span class="text-uppercase">Keep Shopping</span>
-
+        <div class="row">
+            <div class="col">
+                {% if bag_items %}
+                    <div class="table-responsive rounded">
+                        <!-- Bag items table would go here -->
+                    </div>
+                {% else %}
+                    <p class="lead mb-5">Your bag is empty</p>
+                    <a href="{% url 'products' %}" class="btn btn-outline-black round-0 btn-lg">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Keep Shopping</span>
+                    </a>
+                {% endif %}
+            </div>
         </div>
     </div>
-  </div>
 {% endblock %}
