--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -24,7 +24,11 @@
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                         </a>
                     {% endif %}
-                    <a href="{% url 'products' %}" class="add-to-basket text-center"><i class="fa-regular fa-plus fa-fw mr-2"></i>ADD TO BASKET</a>
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                        {% csrf_token %}
+                            <button href="" class="add-to-basket text-center" type="submit" value="Add to Bag"><i class="fa-regular fa-plus fa-fw mr-2"></i>ADD TO BASKET</button>
+                            <input type="hidden" name="redirect_url" value="{{ request.path}}">
+                    </form>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
