--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Shopping Bag</h2>
+                <h2 class="logo-font mb-4 header text-center">Shopping Cart</h2>
                 <hr>
             </div>
         </div>
@@ -34,7 +34,6 @@
                                     <th scope="col">Subtotal</th>
                                 </tr>
                             </thead>
-
                             {% for item in bag_items %}
                                 <tr>
                                     <td class="p-3 w-25">
