--- a/static/css/base.css
+++ b/static/css/base.css
@@ -153,6 +153,21 @@ a:-webkit-any-link {
 .table {
   --bs-table-bg: #fff7ec;
 }
+
+.message-container {
+  position: fixed;
+  top: 72px;
+  right: 15px;
+  z-index: 9999999999;
+}
+
+.custom-toast {
+  overflow: visible;
+}
+
+.toast-capper {
+  height: 2px;
+}
 /* -------------------------------- Media Queries */
 
 /* Mobile Styles (up to 767px) */
