--- a/templates/base.html
+++ b/templates/base.html
@@ -103,13 +103,22 @@
         {% include 'includes/mobile-top-header.html' %}
     </header>
     {% if messages%}
-    <div class="message-container"></div>
-    {% endif %} {% block page_header %}
-    <div></div>
-    {% endblock %} {% block content %}
-    <div></div>
-    {% endblock %} {% block postloadjs %}
-    <div></div>
+    <div class="message-container">
+      {% for message in messages%}
+      {% include 'includes/toasts/toast_success.html' %}
+      {% endfor %}
+    </div>
+    {% endif %} 
+    {% block page_header %}
+    
+    {% endblock %} 
+    {% block content %}
+    
+    {% endblock %} 
+    {% block postloadjs %}
+    <script type="text/javascript">
+      $('.toast').toast('show');
+    </script>
     {% endblock %}
   </body>
 </html>
