--- a/templates/base.html
+++ b/templates/base.html
@@ -102,22 +102,39 @@
         <!-- Mobile top header for smaller screens -->
         {% include 'includes/mobile-top-header.html' %}
     </header>
-    {% if messages%}
+    {% if messages %}
     <div class="message-container">
-      {% for message in messages%}
-      {% include 'includes/toasts/toast_success.html' %}
-      {% endfor %}
+        {% for message in messages %}
+            <div class="toast">
+                <div class="toast-header">
+                    <strong class="mr-auto">Message</strong>
+                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    {{ message }}
+                </div>
+            </div>
+        {% endfor %}
     </div>
-    {% endif %} 
+{% endif %}
+
     {% block page_header %}
-    
-    {% endblock %} 
+    {% endblock %}
+
     {% block content %}
-    
-    {% endblock %} 
+    {% endblock %}
+
     {% block postloadjs %}
     <script type="text/javascript">
-      $('.toast').toast('show');
+        document.addEventListener("DOMContentLoaded", function () {
+            var toastElList = document.querySelectorAll('.toast');
+            toastElList.forEach(function (toastEl) {
+                var toast = new bootstrap.Toast(toastEl);
+                toast.show();
+            });
+        });
     </script>
     {% endblock %}
   </body>
