--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,9 +1,9 @@
-<div class="toast custom-toast rounded-0 border-top-0" date-autohide="false">
-    <div class="arrow-up arrow-success"></div>
-    <div class="w-100 toast-capper bg-success"></div>
+<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
+    <div class="arrow-up arrow-danger"></div>
+    <div class="w-100 toast-capper bg-danger"></div>
     <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Success!</strong>
-        <button class="ml-2 mb-1 close text-dark" type="button" data-dismiss="toast" aria-label="Close">
+        <strong class="mr-auto">Danger!</strong>
+        <button class="ml-2 mb-1 close text-dark" type="button" data-bs-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
