--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script
       src="https://kit.fontawesome.com/188f55f490.js"
       crossorigin="anonymous"
@@ -103,22 +103,19 @@
         {% include 'includes/mobile-top-header.html' %}
     </header>
     {% if messages %}
-    <div class="message-container">
+      <div class="">
         {% for message in messages %}
-            <div class="toast">
-                <div class="toast-header">
-                    <strong class="mr-auto">Message</strong>
-                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="toast-body">
-                    {{ message }}
-                </div>
-            </div>
+          <div class="toast-container align-items-center alert-{{ message.tags }} border-0 show data-bs-delay="5000"" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+              <div class="toast-body">
+                {{ message }}
+              </div>
+              <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+              </div>
+          </div>
         {% endfor %}
-    </div>
-{% endif %}
+      </div>
+    {% endif %}
 
     {% block page_header %}
     {% endblock %}
@@ -127,14 +124,13 @@
     {% endblock %}
 
     {% block postloadjs %}
-    <script type="text/javascript">
-        document.addEventListener("DOMContentLoaded", function () {
-            var toastElList = document.querySelectorAll('.toast');
-            toastElList.forEach(function (toastEl) {
-                var toast = new bootstrap.Toast(toastEl);
-                toast.show();
-            });
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const toastElList = document.querySelectorAll('.toast');
+        toastElList.forEach(toastEl => {
+          new bootstrap.Toast(toastEl).show();
         });
+      });
     </script>
     {% endblock %}
   </body>
