--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,17 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta charset="utf-8" />
-    {% endblock %} {% block extra_meta %}{% endblock %} {% block corecss%}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    {% endblock %} 
+
+    {% block extra_meta %}
+    {% endblock %} 
+
+    {% block corecss%}
+    <link 
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+      rel="stylesheet" 
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+      crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,23 +28,33 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    {% endblock %} {% block extra_css %}{% endblock %} {% block corejs %}
+    {% endblock %}
+
+    {% block extra_css %}
+    {% endblock %} 
+
+    {% block corejs %}
     <script
-    src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-    crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"></script>
+    <script 
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" 
+      crossorigin="anonymous"></script>
+    <script 
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" 
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" 
+      crossorigin="anonymous"></script>
     <script
       src="https://kit.fontawesome.com/188f55f490.js"
       crossorigin="anonymous"
     ></script>
     <script src="{% static 'js/script.js' %}"></script>
-    {% endblock %} {% block extra_js %}{% endblock %}
+    {% endblock %} 
+
+    {% block extra_js %}
+    {% endblock %}
 
     <title class="title">String Theory {% block extra_title %}{% endblock %}</title>
   </head>
@@ -102,20 +121,15 @@
         <!-- Mobile top header for smaller screens -->
         {% include 'includes/mobile-top-header.html' %}
     </header>
+
+
     {% if messages %}
-      <div class="">
-        {% for message in messages %}
-          <div class="toast-container align-items-center alert-{{ message.tags }} border-0 show data-bs-delay="5000"" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="d-flex">
-              <div class="toast-body">
-                {{ message }}
-              </div>
-              <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-              </div>
-          </div>
-        {% endfor %}
-      </div>
-    {% endif %}
+    <div class="message-container">
+      {% for message in messages %}
+        {% include 'includes/toasts/toast_success.html' %}
+      {% endfor %}
+    </div>
+  {% endif %}
 
     {% block page_header %}
     {% endblock %}
@@ -125,10 +139,11 @@
 
     {% block postloadjs %}
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const toastElList = document.querySelectorAll('.toast');
-        toastElList.forEach(toastEl => {
-          new bootstrap.Toast(toastEl).show();
+      document.addEventListener('DOMContentLoaded', function () {
+        const toasts = document.querySelectorAll('.toast');
+        toasts.forEach(toast => {
+          const toastInstance = new bootstrap.Toast(toast);
+          toastInstance.show();
         });
       });
     </script>
