--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,13 +1,10 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
-    <div class="arrow-up arrow-warning"></div>
+<div class="toast custom-toast rounded-0 border-top-0" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="w-100 toast-capper bg-warning"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Warning!</strong>
-        <button class="ml-2 mb-1 close text-dark" type="button" data-bs-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    <div class="toast-header">
+      <strong class="me-auto">Warning!</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-    <div class="toast-body bg-white">
-        {{ message }}
+    <div class="toast-body">
+      {{ message | safe }}
     </div>
-</div> 
+  </div>
