--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,4 +1,5 @@
 <div class="toast custom-toast rounded-0 border-top-0" role="alert" aria-live="assertive" aria-atomic="true">
+  <div class="arrow-up arrow-success"></div>
   <div class="w-100 toast-capper bg-success"></div>
   <div class="toast-header">
     <strong class="me-auto">Success</strong>
