fix: class spelt wrong, wasn't picking up CSS

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -2,7 +2,7 @@
   <div class="arrow-up arrow-success"></div>
   <div class="w-100 toast-capper bg-success"></div>
   <div class="toast-header">
-    <strong class="me-auto">Success</strong>
+    <strong class="me-auto">Success!</strong>
     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
   <div class="toast-body">
@@ -14,7 +14,7 @@
     </div>
     {% if grand_total %}
       <p class="logo-font bg-white text-black py-1">"Your Bag ({{product_count}})</p>
-      <div class="bag-notifiction-wrapper">
+      <div class="bag-notification-wrapper">
         {% for item in bag_items %}
           <div class="row">
             <div class="col-3 my-1">
