--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -27,6 +27,7 @@
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                        <!-- Item sort view dropdown-->
                         <div class="sort-select-wrapper w-50">
                             <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
                                 <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
@@ -53,8 +54,10 @@
                 <div class="row">
                     {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                            <!-- Item cards -->
                             <div class="card h-100 border-0 product-card">
                                 {% if product.image %}
+                                <!-- Card item image, first via url, if none then saved image. -->
                                 <a href="{% url 'product_detail' product.id %}">
                                     <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                                 </a>
@@ -67,6 +70,7 @@
                                     <p class="mb-0">{{ product.name }}</p>
                                 </div>
                                 <div class="card-footer pt-0 border-0 text-left">
+                                    <!--Card footer details-->
                                     <div class="row">
                                         <div class="col">
                                             <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
@@ -87,6 +91,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Same as above, smaller screens reduces number of visable items. -->
                         {% if forloop.counter|divisibleby:1 %}
                             <div class="col-12 d-sm-none mb-5">
                                 <hr>
