chore: comments added

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,3 +1,4 @@
+<!-- Buttons and dropdowns for selecting items, mobile view-->
 <header class="fixed-top header-container w-100 mobile-background">
     <nav class="navbar navbar-light">
         <div class="container-fluid">
