--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -4,7 +4,7 @@
     <div class="row navbar text-center d-flex justify-content-between">
         <div class="dropdown show col gold">
             <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            All Products <i class="fa-solid fa-chevron-down fa-fw"></i>
+            Shop All <i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <li><a class="dropdown-item" href="{% url 'products' %}?sort=price&direction=asc">By Price</a></li>
@@ -43,7 +43,7 @@
               <li><a class="dropdown-item" href="{% url 'products' %}?category=bass_guitars">All</a></li>
             </ul>
         </div>
-        <div class="dropdown show col gold">
+        <div class="dropdown show col gold text-nowrap">
           <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Accessories<i class="fa-solid fa-chevron-down fa-fw"></i>
           </a>
