--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="{% static 'js/script.js' %}"></script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     {% endblock %} 
 
     {% block extra_js %}
