chore: stripe python added to views

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -96,9 +96,11 @@
             </div>
         </div>
         {% if product.category.id == 4 %}
+        <!-- Change below.-->
         <div class="row mt-1 mt-md-3">
                 <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                     <h3 class="font-weight-bold">Details</h3>
+                    <!-- Change above.-->
                     <h4>Colour:</h4>
                     <p>{{ product.colour }}</p>
                     <h4>Weight:</h4>
