--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -39,3 +39,28 @@
   border: 0 solid #000;
   border-bottom-width: 1px;
 }
+
+/* -------------------------------- Loading Spinner */
+
+#loading-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(166, 125, 0, 0.85);
+  z-index: 9999;
+}
+
+.loading-spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  height: 100%;
+}
+
+.fa-guitar {
+  color: rgba(188, 5, 0, 0.85);
+}
