--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -108,6 +108,8 @@
                         <div class="mb-3" id="card-element"></div>
                         <!-- Used to display from errors-->
                         <div class="mb-3" id="card-errors" role="alert"></div>
+                        <!-- pass client secret to view to get payment id -->
+                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
                     <div class="submit-button text-right mt-5 mb-2">
                         <!-- link back to bag-->
