feat: allauth templates modified

--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
               </li>
             <!-- User Account -->
             <li class="list-inline-item dropdown mr-2">
-              <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="text-black nav-link" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="text-center gold">
                   <div><i class="fas fa-user fa-lg"></i></div>
                   <p class="my-0">My Account</p>
