--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <!-- if items in basket, provides details -->
-    {% if grand_total %}
+    {% if grand_total and not on_profile_page %}
       <p class="logo-font bg-white text-black py-1">"Your Bag ({{product_count}})</p>
       <div class="bag-notification-wrapper">
         {% for item in bag_items %}
