feat: profile form now with correct css

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -19,3 +19,9 @@
   max-height: 416px;
   overflow-y: auto;
 }
+
+.profile-form-input {
+  background-color: #fff7ec;
+  border: 0 solid #000;
+  border-bottom-width: 1px;
+}
