--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h2 class="logo-font mb-4">My Profile</h2>
+                <h2 class="logo-font mb-4 header">My Profile</h2>
                 <hr>
             </div>
         </div>
