chore: allauth headers given margin tops and center aligned

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 
-<h2 class="logo-font mb-4 header">{% trans "Sign In" %}</h2>
+<h2 class="logo-font mb-4 header text-center mt-3">{% trans "Sign In" %}</h2>
 <hr>
 
 {% get_providers as socialaccount_providers %}
