--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-<h2 class="logo-font mb-4 header">{% trans "Sign Out" %}</h2>
+<h2 class="logo-font mb-4 header text-center mt-3">{% trans "Sign Out" %}</h2>
 <hr>
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
