--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 
-    <h2 class="logo-font mb-4 header">{% trans "Password Reset" %}</h2>
+    <h2 class="logo-font mb-4 header text-center mt-3">{% trans "Password Reset" %}</h2>
     <hr>
     
     {% if user.is_authenticated %}
