--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -8,7 +8,7 @@
 
 {% block inner_content %}
 
-<h2 class="logo-font mb-4 header">{% trans "Confirm E-mail Address" %}</h2>
+<h2 class="logo-font mb-4 header text-center mt-3">{% trans "Confirm E-mail Address" %}</h2>
 <hr>
 
 {% if confirmation %}
