--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-<h2 class="logo-font mb-4 header">{% trans "Verify Your E-mail Address" %}</h2>
+<h2 class="logo-font mb-4 header text-center mt-3">{% trans "Verify Your E-mail Address" %}</h2>
 <hr>
 
 {% url 'account_email' as email_url %}
