feat: Product admin - product form

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -11,7 +11,7 @@
                 </a>
                 <div> <ul class="list-inline mb-0">
                         <li class="list-inline-item icon">
-                            <form action="/user" method="get">
+                            <form action="{% url 'profile' %}" method="get">
                                 <i class="fas fa-user fa-lg"></i>
                             </form>
                         </li>
