--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -47,6 +47,16 @@
                     {% else %}
                         <small class="text-muted mb-md-2">No Rating</small>
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                        <div class="row">
+                            <div class="col">
+                                <small class="ml-3">
+                                    <a href="{% url 'edit_product' product.id %}">Edit</a>
+                                    <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
+                                </small>
+                            </div>
+                        </div>
+                    {% endif %}
                     <h2>Description</h2>
                     <p class="mt-3">{{ product.description }}</p>
                 </div>
