--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -86,6 +86,16 @@
                                             {% else %}
                                                 <small class="text-muted">No Rating</small>
                                             {% endif %}
+                                            {% if request.user.is_superuser %}
+                                            <div class="row">
+                                                <div class="col">
+                                                    <small class="ml-3">
+                                                        <a href="{% url 'edit_product' product.id %}">Edit</a>
+                                                        <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
+                                                    </small>
+                                                </div>
+                                            </div>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
