--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,6 +24,30 @@ body {
   width: 1.5rem;
 }
 
+.hero {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.hero img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures it covers the whole area */
+  z-index: -1; /* Keeps it behind text */
+}
+
+.hero-text {
+  color: white;
+  position: relative;
+  z-index: 1;
+}
 .shop-now-button {
   background: black;
   color: white;
