--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -32,6 +32,7 @@
             <div class="collapse navbar-collapse test" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
+                        <li><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                         <a class="nav-link" href="#" id="navbarDropdownMenuLink1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             All Products<i class="fa-solid fa-chevron-down fa-fw"></i>
                         </a>
