feat: header links updated and test updated

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -54,7 +54,7 @@
           </ul>
         </div>
         <div class="show col gold">
-          <a class="text-reset text-decoration-none cursor-hover" href="" id="#" aria-haspopup="true" aria-expanded="false">
+          <a class="text-reset text-decoration-none cursor-hover" href="{% url 'blog' %}" id="#" aria-haspopup="true" aria-expanded="false">
           Blog
           </a>
         </div>
