--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -33,4 +33,23 @@
             {% endif %}
           </div>
       </div>
+
+      <div class="row">
+        {% for post in blog_posts %}
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="card">
+              <img src="{{ post.image_url }}" class="card-img-top" alt="{{ post.title }}">
+              <div class="card-body">
+                <h5 class="card-title">{{ post.title }}</h5>
+                <p class="card-text">{{ post.content|slice:":100" }}...</p>
+                <a href="{% url 'view_blog' post.id %}" class="btn btn-primary">Read more</a>
+              </div>
+            </div>
+          </div>
+        {% empty %}
+          <p>No blog posts available.</p>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
 {% endblock %}
