--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -13,78 +13,92 @@
 {% block content %}
   <div class="overlay"></div>
   <div class="container">
-      <div class="row">
-          <div class="col-12 col-md-6">
-              <h2 class="logo-font mb-4 header">Blog</h2>
-              <h5 class="text-muted">xxxxxxxxxxxxxx</h5>
-              <hr>
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <h2 class="logo-font mb-4 header">Blog</h2>
+        <h5 class="text-muted">xxxxxxxxxxxxxx</h5>
+        <hr>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        {% if request.user.is_authenticated %}
+          <div class="text-right">
+            <p class="text-muted">Author authenticated, click to add to blog!</p>
+            <a class="btn btn-black rounded-0" href="{% url 'add_blog' %}">Add Blog</a>
           </div>
+          <hr>
+        {% endif %}
       </div>
+    </div>
 
-    <div class="container h-100">
-      <div class="row">
-          <div class="col">
-            {% if request.user.is_authenticated %}
-              <div class="text-right">
-                <p class="text-muted">Author authenticated, click to add to blog!</p>
-                <a class="btn btn-black rounded-0" href="{% url 'add_blog' %}">Add Blog</a>
-              </div>
-              <hr>
-            {% endif %}
+    {% for post in blog_page %}
+      <div class="row mb-4 align-items-center">
+        <!-- Text Content -->
+        <div class="col-md-8">
+          <h2>
+            <a href="{% url 'blog_detail' post.id %}" class="text-decoration-none text-dark">
+              {{ post.title }}
+            </a>
+          </h2>
+          <p>
+            <a href="{% url 'blog_detail' post.id %}" class="text-decoration-none text-dark">
+              {{ post.content|truncatewords:30 }}
+            </a>
+          </p>
+          <div class="row">
+            <div class="col-md-4">Author: {{ post.author }}</div>
+            <div class="col-md-4">Date Added: {{ post.created_at|date:"F j, Y" }}</div>
           </div>
+        </div>
+        <!-- Image Preview (Right) -->
+        <div class="col-md-4">
+          <div class="border rounded p-2 text-center" style="max-width: 300px; max-height: 300px; overflow: hidden;">
+            <a href="{% url 'blog_detail' post.id %}">
+              {% if post.image %}
+                <img class="card-img-top img-fluid" src="{{ post.image.url }}" alt="{{ post.name }}">
+              {% else %}
+                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ post.name }}">
+              {% endif %}
+            </a>
+          </div>
+        </div>
       </div>
-
-      <div class="container mt-4">
-        {% for post in blog_page %}
-            <div class="row mb-4 align-items-center">
-                <!-- Text Content -->
-                <div class="col-md-8">
-                    <h2>{{ post.title }}</h2>
-                    <p>{{ post.content|truncatewords:30 }}</p>
-                </div>
-                <!-- Image Preview (Right) -->
-                {% if post.image %}
-                <div class="col-md-4">
-                  <div class="border rounded p-2 text-center" style="max-width: 300px; max-height: 300px; overflow: hidden;">
-                    <a href="{% url 'blog_detail' post.id %}">
-                      <img class="card-img-top img-fluid" src="{{ post.image.url }}" alt="{{ post.name }}">
-                    </a>
-                  </div>
-                </div>
-                {% else %}
-                <div class="col-md-4">
-                  <div class="border rounded p-2 text-center" style="max-width: 300px; max-height: 300px; overflow: hidden;">
-                    <a href="{% url 'blog_detail' post.id %}">
-                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ post.name }}">
-                    </a>
-                  </div>
-                </div>
-                {% endif %}
-                </div>
-            </div>
-        {% endfor %}
+      <div class="row">
+        <div class="col-md-4 text-muted">
+          Tags: {{ post.tags }}
+        </div>
       </div>
+      <hr>
+    {% endfor %}
 
-      <nav aria-label="Blog page navigation">
-        <ul class="pagination justify-content-center">
-          {% if blog_page.has_previous %}
-            <li class="page-item">
-              <a href="?page=1" class="gold page-link">First</a>
-            </li>
-            <li class="page-item">
-              <a href="?page={{ blog_page.previous_page_number }}" class="gold page-link">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
-            </li>   
-          {% endif %}
-          {% for page_num in blog_page.paginator.page_range %}
-            <li class="page-item {% if blog_page.number == page_num %}active{% endif %}">
-                <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-            </li>
-          {% endfor %}
-          {% if blog_page.has_next %}
+    <nav aria-label="Blog page navigation">
+      <ul class="pagination justify-content-center mt-4">
+        {% if blog_page.has_previous %}
           <li class="page-item">
-            <a href="?page=1" class="gold page-link">Last</a>
+            <a href="?page=1" class="gold page-link">First</a>
+          </li>
+          <li class="page-item">
+            <a href="?page={{ blog_page.previous_page_number }}" class="gold page-link">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>   
+        {% endif %}
+        {% for page_num in blog_page.paginator.page_range %}
+          {% if page_num == 1 or page_num == blog_page.paginator.num_pages or page_num >= blog_page.number|add:"-2" and page_num <= blog_page.number|add:"2" %}
+            <li class="page-item {% if blog_page.number == page_num %}active{% endif %}">
+              <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+            </li>
+          {% elif page_num == blog_page.number|add:"-3" or page_num == blog_page.number|add:"3" %}
+            <li class="page-item">
+              <span class="page-link">...</span>
+            </li>
+          {% endif %}
+        {% endfor %}
+        {% if blog_page.has_next %}
+          <li class="page-item">
+            <a href="?page={{ blog_page.paginator.num_pages }}" class="gold page-link">Last</a>
           </li>
           <li class="page-item">
             <a href="?page={{ blog_page.next_page_number }}" class="gold page-link">
@@ -92,6 +106,7 @@
             </a>
           </li>   
         {% endif %}
-        </ul>
-      </nav>
+      </ul>
+    </nav>
+  </div>
 {% endblock %}
