--- a/templates/base.html
+++ b/templates/base.html
@@ -160,5 +160,10 @@
       });
     </script>
     {% endblock %}
+  
+    {% include 'includes/footer.html' %}
+      <div>
+        {% include 'includes/mobile_footer.html' %}
+      </div>
   </body>
 </html>
