--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,9 +11,9 @@
 {% endblock %} 
 
 {% block content %}
-  <div class="container h-100">
+  <div class="container h-100" >
     <img src="/media/desktophero.png" alt="Pink Fender Telecaster with gear" class="hero">
-    <div class="row h-100">
+    <div class="row">
       <div class="col-7 col-md-6 my-auto ">
         <h1 class="display-4 logo-font text-black">
           The new collections are here
