feat: blog page improvements and mobile footer finished

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,8 +11,8 @@
 {% endblock %} 
 
 {% block content %}
+  <img src="/media/desktophero.png" alt="Pink Fender Telecaster with gear" class="hero">
   <div class="container h-100" >
-    <img src="/media/desktophero.png" alt="Pink Fender Telecaster with gear" class="hero">
     <div class="row">
       <div class="col-7 col-md-6 my-auto ">
         <h1 class="display-4 logo-font text-black">
@@ -31,5 +31,5 @@
       </div>
     </div>
   </div>
-  <div><hr class="center-diamond"></div>
+  <!--<div><hr class="center-diamond"></div>-->
 {% endblock %}
