--- a/templates/includes/mobile_footer.html
+++ b/templates/includes/mobile_footer.html
@@ -1,9 +1,9 @@
     <!-- Mobile Footer -->
     <footer class="text-center mobile-footer">
         <div class="container">
-            <div class="row">
+            <div class="row mt-3">
                 <div class="col">
-                    <hr class="center-diamond">
+                    <hr class="center-diamond mt-3">
                 </div>
             </div>
             <!-- Social icons and contact info -->
@@ -28,11 +28,12 @@
                         </li>
                     </ul>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <hr class="center-diamond">
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col justify-content-center w-100">
+                    <hr class="center-diamond">
                 </div>
+            </div>
                 <div class="row justify-content-center">
                 <!-- Contact info (stacked on top of each other) -->
                     <div class="col-12 col-md-4 mb-1">
@@ -42,19 +43,22 @@
                     </div>
                 </div>
             </div>
-    
-            <!-- Footer links (equally spaced at the bottom) -->
-            <div class="row">
-                <div class="col-4 d-flex justify-content-between">
+            <!-- Footer links (centered in 3 columns) -->
+            <div class="row mx-2">
+                <div class="col text-center">
                     <a class="text-decoration-none text-black" href="{% url 'blog' %}">Blog</a>
+                </div>
+                <div class="col text-center">
                     <a class="text-decoration-none text-black" href="#">Contact Us</a>
+                </div>
+                <div class="col text-center">
                     <a class="text-decoration-none text-black" href="#">About Us</a>
                 </div>
             </div>
     
             <div class="row">
                 <div class="col">
-                    <p class="text-muted small text-center mb-0 mt-auto">&copy; 2025 String Theory. All rights reserved.</p>
+                    <p class="text-muted fs-6 text-center mb-0 mt-2">&copy; 2025 String Theory. All rights reserved.</p>
                 </div>
             </div>
         </div>
