--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -14,9 +14,9 @@
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-6">
+      <div class="col-12">
         <h2 class="logo-font mb-4 header">Blog</h2>
-        <h5 class="text-muted">xxxxxxxxxxxxxx</h5>
+        <h5 class="text-muted">Welcome to our blog! Explore the latest posts and insights.</h5>
         <hr>
       </div>
     </div>
@@ -70,7 +70,7 @@
           Tags:
           {% for tag in post.tags.all %}
             <a href="{% url 'blog_list_by_tag' tag.id %}" class="badge text-muted text-decoration-none">
-              #{{ tag.name }}
+              #{{ tag.name|title }}
             </a>
           {% endfor %}
         </div>
@@ -93,27 +93,27 @@
           </li>   
         {% endif %}
         {% for page_num in blog_page.paginator.page_range %}
-          {% if page_num == 1 or page_num == blog_page.paginator.num_pages or page_num >= blog_page.number|add:"-2" and page_num <= blog_page.number|add:"2" %}
-            <li class="page-item {% if blog_page.number == page_num %}active{% endif %}">
-              <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-            </li>
-          {% elif page_num == blog_page.number|add:"-3" or page_num == blog_page.number|add:"3" %}
-            <li class="page-item">
-              <span class="page-link">...</span>
-            </li>
-          {% endif %}
+            {% if page_num >= blog_page.number|add:"-1" and page_num <= blog_page.number|add:"1" %}
+                <li class="page-item {% if blog_page.number == page_num %}active{% endif %}">
+                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                </li>
+            {% elif page_num == blog_page.number|add:"-2" or page_num == blog_page.number|add:"2" %}
+                <li class="page-item">
+                    <span class="page-link">...</span>
+                </li>
+            {% endif %}
         {% endfor %}
         {% if blog_page.has_next %}
-          <li class="page-item">
-            <a href="?page={{ blog_page.paginator.num_pages }}" class="gold page-link">
-              <i class="fas fa-angle-double-right"></i>
-            </a>
-          </li>
           <li class="page-item">
             <a href="?page={{ blog_page.next_page_number }}" class="gold page-link">
               <span aria-hidden="true"><i class="fas fa-angle-right"></i></span>
             </a>
           </li>   
+          <li class="page-item">
+            <a href="?page={{ blog_page.paginator.num_pages }}" class="gold page-link">
+              <i class="fas fa-angle-double-right"></i>
+            </a>
+          </li>
         {% endif %}
       </ul>
     </nav>
