--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -14,91 +14,121 @@
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-6">
+      <div class="col-12 ">
         <h2 class="logo-font mb-4 header">Blog list</h2>
-        <h5 class="text-muted">xxxxxxxxxxxxxx</h5>
+        <h5 class="text-muted">Use the tags below to find blogs that apply to you!</h5>
         <hr>
       </div>
     </div>
     {% for post in blog_page %}
-      <div class="row mb-4 align-items-center">
-        <!-- Text Content -->
-        <div class="col-md-8">
-          <h2>
-            <a href="{% url 'blog_detail' post.id %}" class="text-decoration-none text-dark">
-              {{ post.title }}
-            </a>
-          </h2>
-          <p>
-            <a href="{% url 'blog_detail' post.id %}" class="text-decoration-none text-dark">
-              {{ post.content|truncatewords:30 }}
-            </a>
-          </p>
-          <div class="row">
-            <div class="col-md-4">Author: {{ post.author }}</div>
-            <div class="col-md-4">Date Added: {{ post.created_at|date:"F j, Y" }}</div>
-          </div>
-        </div>
-        <!-- Image Preview (Right) -->
-        <div class="col-md-4">
-          <div class="border rounded p-2 text-center" style="max-width: 300px; max-height: 300px; overflow: hidden;">
-            <a href="{% url 'blog_detail' post.id %}">
-              {% if post.image %}
-                <img class="card-img-top img-fluid" src="{{ post.image.url }}" alt="{{ post.name }}">
-              {% else %}
-                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ post.name }}">
-              {% endif %}
-            </a>
-          </div>
+    <div class="row mb-4 align-items-center">
+      <!-- Text Content -->
+      <div class="col-md-8">
+        <h2>
+          <a href="{% url 'blog_detail' post.id %}" class="text-decoration-none text-dark">
+            {{ post.title }}
+          </a>
+        </h2>
+        <p>
+          <a href="{% url 'blog_detail' post.id %}" class="text-decoration-none text-dark">
+            {{ post.content|truncatewords:30 }}
+          </a>
+        </p>
+        <div class="row">
+          <div class="col-md-4">Author: {{ post.author }}</div>
+          <div class="col-md-4">Date Added: {{ post.created_at|date:"F j, Y" }}</div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 text-muted">
-          Tags:
-          {% for tag in post.tags.all %}
-            <a href="{% url 'blog_list_by_tag' tag.id %}" class="badge bg-primary text-white text-decoration-none">
-              {{ tag.name }}
-            </a>
-          {% endfor %}
+      <!-- Image Preview (Right) -->
+      <div class="col-md-4">
+        <div class="border rounded p-2 text-center" style="max-width: 300px; max-height: 300px; overflow: hidden;">
+          <a href="{% url 'blog_detail' post.id %}">
+            {% if post.image %}
+              <img class="card-img-top img-fluid" src="{{ post.image.url }}" alt="{{ post.name }}">
+            {% else %}
+              <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ post.name }}">
+            {% endif %}
+          </a>
         </div>
       </div>
-      <hr>
-    {% endfor %}
-
-    <nav aria-label="Blog page navigation">
-      <ul class="pagination justify-content-center mt-4">
-        {% if blog_page.has_previous %}
-          <li class="page-item">
-            <a href="?page=1" class="gold page-link">First</a>
-          </li>
-          <li class="page-item">
-            <a href="?page={{ blog_page.previous_page_number }}" class="gold page-link">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>   
-        {% endif %}
-        {% for page_num in blog_page.paginator.page_range %}
-          {% if page_num == 1 or page_num == blog_page.paginator.num_pages or page_num >= blog_page.number|add:"-2" and page_num <= blog_page.number|add:"2" %}
-            <li class="page-item {% if blog_page.number == page_num %}active{% endif %}">
-              <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-            </li>
-          {% elif page_num == blog_page.number|add:"-3" or page_num == blog_page.number|add:"3" %}
-            <li class="page-item">
-              <span class="page-link">...</span>
-            </li>
-          {% endif %}
+    </div>
+    <div class="row">
+      <div class="col text-muted">
+        Tags:
+        {% for tag in post.tags.all %}
+          <a href="{% url 'blog_list_by_tag' tag.id %}" class="badge text-muted text-decoration-none">
+            #{{ tag.name }}
+          </a>
         {% endfor %}
-        {% if blog_page.has_next %}
-          <li class="page-item">
-            <a href="?page={{ blog_page.paginator.num_pages }}" class="gold page-link">Last</a>
+      </div>
+    </div>
+    <hr>
+  {% endfor %}
+
+  <nav aria-label="Blog page navigation">
+    <ul class="pagination justify-content-center mt-4 custom-pagination">
+      {% if blog_page.has_previous %}
+        <li class="page-item">
+          <a href="?page=1" class="gold page-link">
+            <i class="fas fa-angle-double-left"></i>
+          </a>
+        </li>
+        <li class="page-item">
+          <a href="?page={{ blog_page.previous_page_number }}" class="gold page-link">
+            <span aria-hidden="true"><i class="fas fa-angle-left"></i></span>
+          </a>
+        </li>   
+      {% endif %}
+      {% for page_num in blog_page.paginator.page_range %}
+        {% if page_num == 1 or page_num == blog_page.paginator.num_pages or page_num >= blog_page.number|add:"-2" and page_num <= blog_page.number|add:"2" %}
+          <li class="page-item {% if blog_page.number == page_num %}active{% endif %}">
+            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
           </li>
+        {% elif page_num == blog_page.number|add:"-3" or page_num == blog_page.number|add:"3" %}
           <li class="page-item">
-            <a href="?page={{ blog_page.next_page_number }}" class="gold page-link">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>   
+            <span class="page-link">...</span>
+          </li>
         {% endif %}
-      </ul>
-    </nav>
-  </div>
+      {% endfor %}
+      {% if blog_page.has_next %}
+        <li class="page-item">
+          <a href="?page={{ blog_page.paginator.num_pages }}" class="gold page-link">
+            <i class="fas fa-angle-double-right"></i>
+          </a>
+        </li>
+        <li class="page-item">
+          <a href="?page={{ blog_page.next_page_number }}" class="gold page-link">
+            <span aria-hidden="true"><i class="fas fa-angle-right"></i></span>
+          </a>
+        </li>   
+      {% endif %}
+    </ul>
+  </nav>
+</div>
 {% endblock %}
+<nav aria-label="Page navigation">
+<ul class="pagination justify-content-center custom-pagination">
+    {% if blog_page.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page=1">First</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="?page={{ blog_page.previous_page_number }}">Previous</a>
+        </li>
+    {% endif %}
+
+    <li class="page-item active">
+        <span class="page-link">{{ blog_page.number }} of {{ blog_page.paginator.num_pages }}</span>
+    </li>
+
+    {% if blog_page.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ blog_page.next_page_number }}">Next</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="?page={{ blog_page.paginator.num_pages }}">Last</a>
+        </li>
+    {% endif %}
+    
+</ul>
+</nav>
