--- a/blog/templates/blog/edit_blog.html
+++ b/blog/templates/blog/edit_blog.html
@@ -11,7 +11,7 @@
 {% endblock %} 
 
 {% block content %}
-    <div class="overlay">
+    <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -40,7 +40,6 @@
                 </form>
             </div>            
         </div>
-    </div>
     </div>
 {% endblock %}
 
