--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,10 +3,10 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <hr class="center-diamond">
+                    <hr class="center-diamond mt-3">
                 </div>
             </div>
-            <div class="row justify-content-between">
+            <div class="row justify-content-between mt-4">
                 <div class="col justify-content-between">
                     <p class="text-muted small">customer_service@stringtheory.com</p>
                 </div>
@@ -17,7 +17,7 @@
                     <p class="text-muted small">08:00 - 17:00 - Everyday</p>
                 </div>
             </div>
-            <div class="row justify-content-between">
+            <div class="row justify-content-between mt-3">
                 <div class="col-4 d-flex justify-content-between">
                     <a class="text-decoration-none text-black" href="{% url 'blog' %}">Blog</a>
                     <a class="text-decoration-none text-black" href="#">Contact Us</a>
@@ -27,23 +27,23 @@
                     <ul class="list-unstyled d-flex justify-content-between w-100">
                         <li>
                             <a href="https://www.instagram.com" target="_blank" class="text-decoration-none">
-                                <i class="fab fa-instagram icon-red"></i>
+                                <i class="fab fa-instagram icon-red fa-lg"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.youtube.com" target="_blank" class="text-decoration-none">
-                                <i class="fab fa-youtube icon-orange"></i>
+                                <i class="fab fa-youtube icon-orange fa-lg"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.example.com" target="_blank" class="text-decoration-none">
-                                <i class="fa-brands fa-x-twitter icon-red"></i>
+                                <i class="fa-brands fa-x-twitter icon-red fa-lg"></i>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mt-3">
                 <div class="col">
                     <p class="text-muted small text-center">&copy; 2025 String Theory. All rights reserved.</p>
                 </div>
