feat: about us and contact us made, with urls and views added to render, alot of small changes such as links

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -20,24 +20,24 @@
             <div class="row justify-content-between mt-3">
                 <div class="col-4 d-flex justify-content-between">
                     <a class="text-decoration-none text-black" href="{% url 'blog' %}">Blog</a>
-                    <a class="text-decoration-none text-black" href="#">Contact Us</a>
-                    <a class="text-decoration-none text-black" href="#">About Us</a>
+                    <a class="text-decoration-none text-black" href="{% url 'contact_us' %}">Contact Us</a>
+                    <a class="text-decoration-none text-black" href="{% url 'about_us' %}">About Us</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
                     <ul class="list-unstyled d-flex justify-content-between w-100">
                         <li>
                             <a href="https://www.instagram.com" target="_blank" class="text-decoration-none">
-                                <i class="fab fa-instagram icon-red fa-lg"></i>
+                                <i class="fab fa-instagram icon-red fa-2x"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.youtube.com" target="_blank" class="text-decoration-none">
-                                <i class="fab fa-youtube icon-orange fa-lg"></i>
+                                <i class="fab fa-youtube icon-orange fa-2x"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.example.com" target="_blank" class="text-decoration-none">
-                                <i class="fa-brands fa-x-twitter icon-red fa-lg"></i>
+                                <i class="fa-brands fa-x-twitter icon-red fa-2x"></i>
                             </a>
                         </li>
                     </ul>
