--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -59,12 +59,12 @@
           </a>
         </div>
         <div class="show col gold">
-          <a class="text-reset text-decoration-none cursor-hover" href="" id="#" aria-haspopup="true" aria-expanded="false">
+          <a class="text-reset text-decoration-none cursor-hover" href="{% url 'contact_us' %}" id="#" aria-haspopup="true" aria-expanded="false">
           Contact Us
           </a>
         </div>
         <div class="show col gold">
-          <a class="text-reset text-decoration-none cursor-hover" href="" id="#" aria-haspopup="true" aria-expanded="false">
+          <a class="text-reset text-decoration-none cursor-hover" href="{% url 'about_us' %}" id="#" aria-haspopup="true" aria-expanded="false">
           About Us
           </a>
         </div>
