--- a/templates/includes/mobile_footer.html
+++ b/templates/includes/mobile_footer.html
@@ -49,10 +49,10 @@
                     <a class="text-decoration-none text-black" href="{% url 'blog' %}">Blog</a>
                 </div>
                 <div class="col text-center">
-                    <a class="text-decoration-none text-black" href="#">Contact Us</a>
+                    <a class="text-decoration-none text-black" href="{% url 'contact_us' %}">Contact Us</a>
                 </div>
                 <div class="col text-center">
-                    <a class="text-decoration-none text-black" href="#">About Us</a>
+                    <a class="text-decoration-none text-black" href="{% url 'about_us' %}">About Us</a>
                 </div>
             </div>
     
