--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -13,7 +13,7 @@
 {% block content %}
   <div class="overlay"></div>
   <div class="container">
-    <div class="row">
+    <div class="row text-center">
       <div class="col-12">
         <h2 class="logo-font mb-4 header">Blog</h2>
         <h5 class="text-muted">Welcome to our blog! Explore the latest posts and insights.</h5>
