--- a/blog/templates/blog/edit_blog.html
+++ b/blog/templates/blog/edit_blog.html
@@ -13,7 +13,7 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
+        <div class="row text-center">
             <div class="col-12">
                 <h2 class="logo-font mb-4">Blog Entry</h2>
                 <h5 class="text-muted">Please add your blog below</h5>
