--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -12,7 +12,13 @@
     {{ widget.input_text }}
 {% endif %}
 <span class="btn btn-black rounded-0 btn-file">
-    Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
+    Select Image
+    <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"
+    {% if widget.attrs %}
+        {% for name, value in widget.attrs.items %}
+            {{ name }}{% if value is not False %}="{{ value }}"{% endif %}
+        {% endfor %}
+    {% endif %}>
 </span>
 <strong><p class="text-danger" id="filename"></p></strong>
 
